# paraview-superbuild-docker

./: .dockerignore  .gitignore  .gitmodules  .travis.test.py  .travis.yml  Dockerfile  Dockerfile.base  Dockerfile.egl  Dockerfile.osmesa  Dockerfile.qt  LICENSE  README.md  build.sh  run.sh
.github/workflows/: main.yml
examples/: build_paraview-vtk-template_ParaView5.10.sh  build_paraview-vtk-template_ParaView5.6.sh  build_paraview-vtk-template_ParaView5.7.sh  build_paraview-vtk-template_ParaView5.8.sh  build_paraview-vtk-template_ParaView5.9.sh  build_ttk.sh
scripts/: build_paraview.egl.sh  build_paraview.osmesa.sh  build_paraview.sh  build_qt.sh  download_qt.sh  install_cmake.sh  install_ninja.sh
shared/example/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h  ExamplePlugin.xml
